Fix terminal focus action text when focusing/defocusing

BUG: 409813